kubernetes/apps/external-secrets/onepassword-connect/app/httproute.yaml
# yaml-language-server: $schema=https://schemas.tholinka.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: onepassword-connect
spec:
  hostnames:
    - connect.${SECRET_DOMAIN}
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: onepassword-connect
          port: 8080
